--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-js-hw-11</title>
+    <title>Search images</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
@@ -21,7 +21,7 @@
     <div class="gallery">
       <!-- Карточки изображений -->
     </div>
-    <button type="button" class="load-more">Load more</button>
+    <button type="button" class="load-more is-hidden">Load more</button>
 
     <script src="./index.js" type="module"></script>
   </body>
