--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,10 @@
       <button class="submit" type="submit">Search</button>
     </form>
 
-    <div class="gallery">
-      <!-- Карточки изображений -->
+    <div class="container">
+      <div class="gallery">
+        <!-- Карточки изображений -->
+      </div>
     </div>
     <button type="button" class="load-more is-hidden">Load more</button>
 
